netbeans sqlite plugin

--- a/netbeans.mdwn
+++ b/netbeans.mdwn
@@ -5,3 +5,5 @@ In a "file open" dialog box, Enter selects the hightlighted folder. To go into t
 To have NetBeans open a custom URL when you run your app (i.e. deploy your war file) when you hit F6 for "Run Project", right-click your project and select Properties, go to the "Run" category and enter a "Relative URL".
 
 sout followed by Tab yields System.out.println(""); per http://netbeans.dzone.com/top-10-interesting-netbeans-shortcuts
+
+http://plugins.netbeans.org/plugin/16018/sqlite-jdbc-driver works fine with https://bitbucket.org/xerial/sqlite-jdbc
