--- a/java/javaone/2012.mdwn
+++ b/java/javaone/2012.mdwn
@@ -1,4 +1,88 @@
-- bookmarked: ~
+- queued:
+    - CON7573:
+        - title: How RESTful Is Your REST?
+        - abstract: The rise of mobile and the diversity of its technologies make exposing a RESTful API the most crucial capability of any application and the key to its success. In the absence ...
+        - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=7573
+        - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON7573_PDF_7573_0001.pdf
+        - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON7573_mp4_7573_001.mp4
+        - review: ...
+    - CON7147:
+        - title: Dare to Compile Your Code with -Xlint:all -Werror
+        - abstract: 'Would you ever dare to enable all compiler warnings? Most people don’t, and some people are afraid to, because of what they might find out about their code. The Java compiler ...'
+        - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=7147
+        - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON7147_PDF_7147_0001.pdf
+        - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON7147_mp4_7147_001.mp4
+        - review: ...
+    - CON2818:
+        - title: A Bird’s-Eye View of the CDI Ecosystem
+        - abstract: 'Although Contexts and Dependency Injection (CDI) is so new, a lively ecosystem is already rapidly evolving around it. If you’d like to get a broad overview of this ecosystem ...'
+        - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=2818
+        - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON2818_PDF_2818_0001.pdf
+        - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON2818_mp4_2818_001.mp4
+        - review: ...
+    - BOF5502:
+        - title: A Platform for Studying Language Features in Java
+        - abstract: Empirical studies are critical to understanding how programming language features are used in practice. They provide answers to questions that help programming languages ... ...
+        - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=5502
+        - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/BOF5502_PDF_5502_0001.pdf
+        - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/BOF5502_mp4_5502_001.mp4
+        - review: ...
+    - CON5141:
+        - title: 'Java DB in JDK 7: A Free, Feature-Rich, Embeddable SQL Database'
+        - abstract: 'This session provides an introduction to a not-to-be overlooked gem in the JDK: the compact, but feature-complete Java DB—a multiuser, fully transactional relational ...'
+        - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=5141
+        - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON5141_PDF_5141_0001.pdf
+        - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON5141_mp4_5141_001.mp4
+        - review: ...
+    - BOF6151:
+        - title: 'NetBeans.Next: The Roadmap Ahead'
+        - abstract: 'Attend this session to get a walk-through of the newest features and enhancements available in the NetBeans IDE. Discover how improvements to the editor, plus Java EE, ...'
+        - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=6151
+        - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/BOF6151_PDF_6151_0001.pdf
+        - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/BOF6151_mp4_6151_001.mp4
+        - review: ...
+    - CON6008:
+        - title: Modern Java Web Development with Play Framework 2.0
+        - abstract: 'The original version of the Play framework brought back the fun to Java Web development. Developer-friendliness, rapid application development, and agile practices were taken ...'
+        - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=6008
+        - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON6008_PDF_6008_0001.pdf
+        - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON6008_mp4_6008_001.mp4
+        - review: ...
+    - CON6793:
+        - title: 'What’s New in Servlet 3.1: An Overview'
+        - abstract: 'As part of the Java EE 7 platform, the Servlet specification is being revised. This session covers the new features in Servlet 3.1.'
+        - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=6793
+        - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON6793_PDF_6793_0001.pdf
+        - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON6793_mp4_6793_001.mp4
+        - review: ...
+    - CON3566:
+        - title: 'JSR 353: Java API for JSON Processing'
+        - abstract: 'JSON is a lightweight data exchange format used increasingly in RESTful Web services by highly visible Websites (Facebook, Twitter, Amazon, and the like). The format is easy ...'
+        - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=3566
+        - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON3566_PDF_3566_0001.pdf
+        - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON3566_mp4_3566_001.mp4
+        - review: ...
+    - CON4038:
+        - title: 'Project EASEL: Developing and Managing HTML5 in a Java World'
+        - abstract: 'Do you want to learn details of the new NetBeans Project EASEL? If so, come to this session, which discusses current trends in HTML5, CSS3, and JavaScript application ...'
+        - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=4038
+        - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON4038_PDF_4038_0001.pdf
+        - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON4038_mp4_4038_001.mp4
+        - review: ...
+    - BOF7664:
+        - title: 'JPA 2.1 Tips, Tricks, and Examples'
+        - abstract: 'This BOF provides insight into the features being introduced in the next JPA specification. It illustrates, through the use of code examples, why and when not to use the new ...'
+        - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=7664
+        - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/BOF7664_PDF_7664_0001.pdf
+        - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/BOF7664_mp4_7664_001.mp4
+        - review: ...
+    - BOF4608:
+        - title: JDBC Community Discussion
+        - abstract: Come to this session to share your thoughts with members of the JDBC Expert Group and with others interested in JDBC.
+        - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=4608
+        - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/BOF4608_PDF_4608_0001.pdf
+        - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/BOF4608_mp4_4608_001.mp4
+        - review: ...
 - other:
     - CON3470:
         - title: Scala Tricks
@@ -27,13 +111,6 @@
         - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=4853
         - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON4853_PDF_4853_0001.pdf
         - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON4853_mp4_4853_001.mp4
-        - review: None
-    - CON7573:
-        - title: How RESTful Is Your REST?
-        - abstract: The rise of mobile and the diversity of its technologies make exposing a RESTful API the most crucial capability of any application and the key to its success. In the absence ...
-        - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=7573
-        - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON7573_PDF_7573_0001.pdf
-        - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON7573_mp4_7573_001.mp4
         - review: None
     - CON3418:
         - title: Confident Data Transfers with Apache Camel Security
@@ -147,13 +224,6 @@
         - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/BOF5440_PDF_5440_0001.pdf
         - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/BOF5440_mp4_5440_001.mp4
         - review: None
-    - CON4435:
-        - title: 'JAX-RS 2.0: New and Noteworthy in the RESTful Web Services API'
-        - abstract: JAX-RS 2.0 is a new standard Java API for RESTful Web services and a major leap forward in the features and use cases covered by the API. The purpose of this technical ...
-        - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=4435
-        - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON4435_PDF_4435_0001.pdf
-        - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON4435_mp4_4435_001.mp4
-        - review: None
     - CON4644:
         - title: JavaFX Extreme GUI Makeover
         - abstract: 'JavaFX is a UI toolkit for building beautiful graphical user interfaces. Unfortunately, user interfaces don’t simply appear—they are the result of many hours of hard work. ...'
@@ -266,13 +336,6 @@
         - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/HOL11111_PDF_11111_0001.pdf
         - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/HOL11111_mp4_11111_001.mp4
         - review: None
-    - HOL10214:
-        - title: Tracing Your Java Application Tuning on Oracle Solaris with DTrace
-        - abstract: 'There are many good tracing tools for Java. Still, most of these tools lack the combination of extreme dynamism, nonintrusiveness, and broad capabilities of Oracle Solaris’ ...'
-        - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=10214
-        - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/HOL10214_PDF_10214_0001.pdf
-        - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/HOL10214_mp4_10214_001.mp4
-        - review: None
     - CON11387:
         - title: An Embedded Service Platform for Uninterruptible Processing
         - abstract: 'With a need for a robust, always-on embedded industrial platform, Rockwell Automation turned to the Java SE Embedded solution. Its small footprint and comprehensive set of ...'
@@ -378,20 +441,6 @@
         - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON3519_PDF_3519_0001.pdf
         - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON3519_mp4_3519_001.mp4
         - review: None
-    - UGF10365:
-        - title: NetBeans Community Day Closing Remarks and Recognitions
-        - abstract: This session presents acknowledgments to members of the NetBeans community.
-        - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=10365
-        - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/UGF10365_PDF_10365_0001.pdf
-        - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/UGF10365_mp4_10365_001.mp4
-        - review: None
-    - UGF10353:
-        - title: NetBeans Community Keynote
-        - abstract: 'NetBeans Community Day returns to JavaOne! In this session, discover how the NetBeans IDE has grown—amassing more than a million active users—and where it stands today in ... ...'
-        - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=10353
-        - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/UGF10353_PDF_10353_0001.pdf
-        - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/UGF10353_mp4_10353_001.mp4
-        - review: None
     - CON5130:
         - title: 'London Java Community: How to Change the World'
         - abstract: 'The London Java Community is a rapidly growing group of more than two thousand developers, all with their own (frequently differing) opinions and ideas. Last year the group ...'
@@ -476,13 +525,6 @@
         - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON3362_PDF_3362_0001.pdf
         - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON3362_mp4_3362_001.mp4
         - review: None
-    - HOL3925:
-        - title: Hack into Your Compiler!
-        - abstract: 'Many people are convinced that compilers are complicated science. Right, they sort of are. On the other hand, JDK 6’s annotation processing API makes it easier than ever to ...'
-        - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=3925
-        - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/HOL3925_PDF_3925_0001.pdf
-        - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/HOL3925_mp4_3925_001.mp4
-        - review: None
     - CON4365:
         - title: 'Polyglot Persistence: EclipseLink JPA for NoSQL, Relational, and Beyond'
         - abstract: Java data access isn’t just about reading and writing from relational databases. It’s also about being able to persist your objects in NoSQL databases and mapping your ...
@@ -539,26 +581,12 @@
         - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON3215_PDF_3215_0001.pdf
         - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON3215_mp4_3215_001.mp4
         - review: None
-    - CON7147:
-        - title: Dare to Compile Your Code with -Xlint:all -Werror
-        - abstract: 'Would you ever dare to enable all compiler warnings? Most people don’t, and some people are afraid to, because of what they might find out about their code. The Java compiler ...'
-        - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=7147
-        - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON7147_PDF_7147_0001.pdf
-        - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON7147_mp4_7147_001.mp4
-        - review: None
     - BOF2628:
         - title: 'OSGi for Earthlings: Meet Eclipse Libra'
         - abstract: 'Eclipse Libra (www.eclipse.org/libra) provides standard tools for OSGi Enterprise application development, particularly tools that integrate the existing WTP and PDE tooling ...'
         - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=2628
         - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/BOF2628_PDF_2628_0001.pdf
         - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/BOF2628_mp4_2628_001.mp4
-        - review: None
-    - CON2818:
-        - title: A Bird’s-Eye View of the CDI Ecosystem
-        - abstract: 'Although Contexts and Dependency Injection (CDI) is so new, a lively ecosystem is already rapidly evolving around it. If you’d like to get a broad overview of this ecosystem ...'
-        - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=2818
-        - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON2818_PDF_2818_0001.pdf
-        - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON2818_mp4_2818_001.mp4
         - review: None
     - BOF2717:
         - title: The Social Developer
@@ -658,13 +686,6 @@
         - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON4496_PDF_4496_0001.pdf
         - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON4496_mp4_4496_001.mp4
         - review: None
-    - BOF5502:
-        - title: A Platform for Studying Language Features in Java
-        - abstract: Empirical studies are critical to understanding how programming language features are used in practice. They provide answers to questions that help programming languages ... ...
-        - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=5502
-        - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/BOF5502_PDF_5502_0001.pdf
-        - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/BOF5502_mp4_5502_001.mp4
-        - review: None
     - BOF3727:
         - title: Developing Multitenant Applications with HK2 2.0
         - abstract: 'The HK2 implementation of the JSR 330 standard, besides dependency injection, provides a proven mechanism for application configuration. EclipseLink provides great support ...'
@@ -678,13 +699,6 @@
         - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=3753
         - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON3753_PDF_3753_0001.pdf
         - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON3753_mp4_3753_001.mp4
-        - review: None
-    - CON5141:
-        - title: 'Java DB in JDK 7: A Free, Feature-Rich, Embeddable SQL Database'
-        - abstract: 'This session provides an introduction to a not-to-be overlooked gem in the JDK: the compact, but feature-complete Java DB—a multiuser, fully transactional relational ...'
-        - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=5141
-        - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON5141_PDF_5141_0001.pdf
-        - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON5141_mp4_5141_001.mp4
         - review: None
     - CON7212:
         - title: 'Java for Embedded Systems: Multicore and More'
@@ -1015,13 +1029,6 @@
         - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/UGF10364_PDF_10364_0001.pdf
         - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/UGF10364_mp4_10364_001.mp4
         - review: None
-    - BOF6151:
-        - title: 'NetBeans.Next: The Roadmap Ahead'
-        - abstract: 'Attend this session to get a walk-through of the newest features and enhancements available in the NetBeans IDE. Discover how improvements to the editor, plus Java EE, ...'
-        - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=6151
-        - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/BOF6151_PDF_6151_0001.pdf
-        - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/BOF6151_mp4_6151_001.mp4
-        - review: None
     - BOF5127:
         - title: 'JSR 310: What’s Taking So Long?'
         - abstract: 'This BOF focuses on JSR 310, the ThreeTen reference implementation, and the upcoming integration of ThreeTen, the new date/time library, into Java 8. The primary goal of the ...'
@@ -1113,26 +1120,12 @@
         - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON2607_PDF_2607_0001.pdf
         - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON2607_mp4_2607_001.mp4
         - review: None
-    - KEY10728:
-        - title: Java Strategy Keynote
-        - abstract: The future course for modern-day living—in both the enterprise business world and the consumer arena—is being positively influenced by the ongoing innovation and value of ... ...
-        - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=10728
-        - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/KEY10728_PDF_10728_0001.pdf
-        - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/KEY10728_mp4_10728_001.mp4
-        - review: None
     - CON8009:
         - title: What’s New in jclouds 1.5
         - abstract: 'jclouds 1.5 is the result of 3.5 years of development by nearly 100 developers interested in portable cloud computing. During this session, you’ll get up-to-date with cloud ...'
         - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=8009
         - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON8009_PDF_8009_0001.pdf
         - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON8009_mp4_8009_001.mp4
-        - review: None
-    - CON6008:
-        - title: Modern Java Web Development with Play Framework 2.0
-        - abstract: 'The original version of the Play framework brought back the fun to Java Web development. Developer-friendliness, rapid application development, and agile practices were taken ...'
-        - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=6008
-        - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON6008_PDF_6008_0001.pdf
-        - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON6008_mp4_6008_001.mp4
         - review: None
     - CON6060:
         - title: Building Rich Client Applications with Eclipse 4
@@ -1161,13 +1154,6 @@
         - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=5132
         - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON5132_PDF_5132_0001.pdf
         - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON5132_mp4_5132_001.mp4
-        - review: None
-    - CON6793:
-        - title: 'What’s New in Servlet 3.1: An Overview'
-        - abstract: 'As part of the Java EE 7 platform, the Servlet specification is being revised. This session covers the new features in Servlet 3.1.'
-        - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=6793
-        - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON6793_PDF_6793_0001.pdf
-        - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON6793_mp4_6793_001.mp4
         - review: None
     - BOF6748:
         - title: Java Workload Optimizations in the Cloud from salesforce.com and Intel
@@ -1421,13 +1407,6 @@
         - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/BOF6457_PDF_6457_0001.pdf
         - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/BOF6457_mp4_6457_001.mp4
         - review: None
-    - CON3566:
-        - title: 'JSR 353: Java API for JSON Processing'
-        - abstract: 'JSON is a lightweight data exchange format used increasingly in RESTful Web services by highly visible Websites (Facebook, Twitter, Amazon, and the like). The format is easy ...'
-        - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=3566
-        - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON3566_PDF_3566_0001.pdf
-        - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON3566_mp4_3566_001.mp4
-        - review: None
     - CON4538:
         - title: 'Java Embedded Goes Modular: How to Build Your Custom Embedded Java Runtime'
         - abstract: JDK 8 has defined a proposed enhancement to the platform that will allow for the creation of a set of compact profiles in addition to the traditional JRE and JDK ...
@@ -1448,13 +1427,6 @@
         - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=7304
         - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/BOF7304_PDF_7304_0001.pdf
         - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/BOF7304_mp4_7304_001.mp4
-        - review: None
-    - CON4038:
-        - title: 'Project EASEL: Developing and Managing HTML5 in a Java World'
-        - abstract: 'Do you want to learn details of the new NetBeans Project EASEL? If so, come to this session, which discusses current trends in HTML5, CSS3, and JavaScript application ...'
-        - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=4038
-        - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON4038_PDF_4038_0001.pdf
-        - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON4038_mp4_4038_001.mp4
         - review: None
     - CON5884:
         - title: What’s New in Java Message Service 2.0
@@ -1504,13 +1476,6 @@
         - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=7001
         - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON7001_PDF_7001_0001.pdf
         - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON7001_mp4_7001_001.mp4
-        - review: None
-    - BOF7664:
-        - title: 'JPA 2.1 Tips, Tricks, and Examples'
-        - abstract: 'This BOF provides insight into the features being introduced in the next JPA specification. It illustrates, through the use of code examples, why and when not to use the new ...'
-        - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=7664
-        - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/BOF7664_PDF_7664_0001.pdf
-        - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/BOF7664_mp4_7664_001.mp4
         - review: None
     - CON4247:
         - title: 'CLDC7: The Java Platform for Feature Phones and Low-Footprint Embedded Devices'
@@ -1694,13 +1659,6 @@
         - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON3908_PDF_3908_0001.pdf
         - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON3908_mp4_3908_001.mp4
         - review: None
-    - BOF4608:
-        - title: JDBC Community Discussion
-        - abstract: Come to this session to share your thoughts with members of the JDBC Expert Group and with others interested in JDBC.
-        - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=4608
-        - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/BOF4608_PDF_4608_0001.pdf
-        - mp4: http://www.myexpospace.com/JavaOne2012/SessionFiles/BOF4608_mp4_4608_001.mp4
-        - review: None
 - unavailable:
     - BOF4670:
         - title: GlassFish Community BOF
@@ -1716,6 +1674,20 @@
         - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/UGF10360_PDF_10360_0001.pdf
         - mp4: Not available
         - review: None
+    - CON4435:
+        - title: 'JAX-RS 2.0: New and Noteworthy in the RESTful Web Services API'
+        - abstract: JAX-RS 2.0 is a new standard Java API for RESTful Web services and a major leap forward in the features and use cases covered by the API. The purpose of this technical ...
+        - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=4435
+        - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/CON4435_PDF_4435_0001.pdf
+        - mp4: Not available
+        - review: None
+    - HOL10214:
+        - title: Tracing Your Java Application Tuning on Oracle Solaris with DTrace
+        - abstract: 'There are many good tracing tools for Java. Still, most of these tools lack the combination of extreme dynamism, nonintrusiveness, and broad capabilities of Oracle Solaris’ ...'
+        - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=10214
+        - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/HOL10214_PDF_10214_0001.pdf
+        - mp4: Not available
+        - review: None
     - CON7105:
         - title: Security Vulnerabilities in Open Source Java Libraries
         - abstract: 'Everyone knows the importance of software security. A successful attack against an application can result in a wide spectrum of negative consequences, including the cost of a ...'
@@ -1728,6 +1700,27 @@
         - abstract: This presentation provides an entertaining introduction to Java and CS terms that more people should understand.
         - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=10466
         - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/UGF10466_PDF_10466_0001.pdf
+        - mp4: Not available
+        - review: None
+    - UGF10365:
+        - title: NetBeans Community Day Closing Remarks and Recognitions
+        - abstract: This session presents acknowledgments to members of the NetBeans community.
+        - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=10365
+        - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/UGF10365_PDF_10365_0001.pdf
+        - mp4: Not available
+        - review: None
+    - UGF10353:
+        - title: NetBeans Community Keynote
+        - abstract: 'NetBeans Community Day returns to JavaOne! In this session, discover how the NetBeans IDE has grown—amassing more than a million active users—and where it stands today in ... ...'
+        - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=10353
+        - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/UGF10353_PDF_10353_0001.pdf
+        - mp4: Not available
+        - review: None
+    - HOL3925:
+        - title: Hack into Your Compiler!
+        - abstract: 'Many people are convinced that compilers are complicated science. Right, they sort of are. On the other hand, JDK 6’s annotation processing API makes it easier than ever to ...'
+        - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=3925
+        - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/HOL3925_PDF_3925_0001.pdf
         - mp4: Not available
         - review: None
     - CON2580:
@@ -1777,6 +1770,13 @@
         - abstract: 'This session will help you make sense of the Java language, Java SE, Java EE, the Java Virtual Machine (JVM), and JDK. This material is presented in the context of the ...'
         - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=10458
         - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/UGF10458_PDF_10458_0001.pdf
+        - mp4: Not available
+        - review: None
+    - KEY10728:
+        - title: Java Strategy Keynote
+        - abstract: The future course for modern-day living—in both the enterprise business world and the consumer arena—is being positively influenced by the ongoing innovation and value of ... ...
+        - url: https://oracleus.activeevents.com/connect/sessionDetail.ww?SESSION_ID=10728
+        - pdf: http://www.myexpospace.com/JavaOne2012/SessionFiles/KEY10728_PDF_10728_0001.pdf
         - mp4: Not available
         - review: None
     - UGF10470:
