--- a/netbeans.mdwn
+++ b/netbeans.mdwn
@@ -1,9 +1,11 @@
 [[!table format=dsv delimiter="	" file="netbeans/vim2netbeans.tsv"]]
 
-In a "file open" dialog box, Enter selects the hightlighted folder. To go into the folder, use Ctrl-Enter.
+In a "file open" dialog box, Enter selects the highlighted folder. To go into the folder, use Ctrl-Enter.
 
 To have NetBeans open a custom URL when you run your app (i.e. deploy your war file) when you hit F6 for "Run Project", right-click your project and select Properties, go to the "Run" category and enter a "Relative URL".
 
 sout followed by Tab yields System.out.println(""); per http://netbeans.dzone.com/top-10-interesting-netbeans-shortcuts
 
 http://plugins.netbeans.org/plugin/16018/sqlite-jdbc-driver works fine with https://bitbucket.org/xerial/sqlite-jdbc
+
+"Next error" seems buggy per https://twitter.com/philipdurbin/status/345540405615525888 ... the most reliable way to navigate to the next error using only a keyboard is to compile your project, hit Cmd-4 to bring up the Output window, arrow up and down over the blue links, and hit Enter to navigate directly to the line with the error.
